6-networking/policies/other/inventory-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: nginx
        image: nginx
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: inventory-svc
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: inventory
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
